Fix for alignment inconsistencies on ORCID id and DBLP profile links

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1323,6 +1323,10 @@ small,
 .small {
   font-size: 85%;
 }
+x-small,
+.x-small {
+  font-size: 10px;
+}
 mark,
 .mark {
   background-color: #fcf8e3;
@@ -5003,19 +5007,6 @@ a.badge:focus {
 .jumbotron .container {
   max-width: 100%;
 }
-.link-sm{
-  font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  text-transform: uppercase;
-  font-size: 10px;
-}
-table,th,td{
-  text-align: center;
-  vertical-align: middle;
-}
-td {
-  height: 18px;
-  vertical-align: center;
-}
 @media screen and (min-width: 768px) {
   .jumbotron {
     padding-top: 48px;
@@ -6945,4 +6936,19 @@ input:focus,
 .panel-default .panel-title,
 .panel-default .panel-footer {
   color: #98978b;
+}
+
+/* Customized css for links table */
+.bottom-none {
+  margin-bottom: 0px;
+}
+.td-middle {
+  height: 25px;
+  vertical-align: middle;
+  padding: 0px 55px 0px 1px; /* top-right-bottom-left */
+}
+.td-box {
+  width: 24px;
+  height: 24px;
+  position: relative;
 }
